force-app/main/default/objects/NCSCOrder__c/fields/WIP_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>WIP_Assigned_Date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_wip_asg_dte / csc_mst_wip_asg_dte
Web service name:
Web service field:</description>
    <label>WIP Assigned Date</label>
    <type>Date</type>
</CustomField>