force-app/main/default/objects/NCSCOrder__c/fields/Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Zipcode__c</fullName>
    <description>Order delivery zipcode 5 or 5+4 are acceptable.</description>
    <label>Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>