force-app/main/default/objects/NCSCOrder__c/recordTypes/CSC.recordType-meta.xml
<RecordType>
    <fullName>CSC</fullName>
    <active>true</active>
    <description>CSC Order</description>
    <label>CSC</label>
</RecordType>