force-app/main/default/objects/NCSCOrder__c/recordTypes/EDD.recordType-meta.xml
<RecordType>
    <fullName>EDD</fullName>
    <active>true</active>
    <label>EDD</label>
</RecordType>