force-app/main/default/objects/NCSCOrder__c/recordTypes/FSS19.recordType-meta.xml
<RecordType>
    <fullName>FSS19</fullName>
    <active>true</active>
    <description>FSS19 Order</description>
    <label>FSS19</label>
</RecordType>